--- a/Tp_Final/pom.xml
+++ b/Tp_Final/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ar.edu.unju.fi</groupId>
-	<artifactId>TrabajoFinal-Grupal</artifactId>
+	<groupId>ar.edu.unju.fi.pvisual</groupId>
+	<artifactId>Tp_Final</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TrabajoFinal-Grupal</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Tp_Final</name>
+	<description>Pagina de oferta laboral</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -31,6 +31,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
